// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FzPdfViewer > Snapshots > should match snapshot - custom dimensions 1`] = `
"<div class="flex flex-col gap-12" style="height: 600px; width: 800px;">
  <div class="bg-grey-100 p-24 flex overflow-hidden h-full w-full rounded justify-center items-center">
    <div class="overflow-auto h-full">
      <div data-testid="vue-pdf" class="shadow-md"></div>
    </div>
  </div>
  <div class="flex justify-between">
    <div class="flex items-center gap-8"><button></button><span class="text-grey-500 font-medium text-base" data-testid="pdf-scale">100 %</span><button></button></div>
    <div class="flex items-center gap-8"><button disabled=""></button><span class="text-grey-500 font-medium text-base" data-testid="pdf-page">1 / 5</span><button></button></div>
  </div>
</div>"
`;

exports[`FzPdfViewer > Snapshots > should match snapshot - default state 1`] = `
"<div class="flex flex-col gap-12" style="height: 768px; width: 512px;">
  <div class="bg-grey-100 p-24 flex overflow-hidden h-full w-full rounded justify-center items-center">
    <div class="overflow-auto h-full">
      <div data-testid="vue-pdf" class="shadow-md"></div>
    </div>
  </div>
  <div class="flex justify-between">
    <div class="flex items-center gap-8"><button></button><span class="text-grey-500 font-medium text-base" data-testid="pdf-scale">100 %</span><button></button></div>
    <div class="flex items-center gap-8"><button disabled=""></button><span class="text-grey-500 font-medium text-base" data-testid="pdf-page">1 / 5</span><button></button></div>
  </div>
</div>"
`;

exports[`FzPdfViewer > Snapshots > should match snapshot - page 3 1`] = `
"<div class="flex flex-col gap-12" style="height: 768px; width: 512px;">
  <div class="bg-grey-100 p-24 flex overflow-hidden h-full w-full rounded justify-center items-center">
    <div class="overflow-auto h-full">
      <div data-testid="vue-pdf" class="shadow-md"></div>
    </div>
  </div>
  <div class="flex justify-between">
    <div class="flex items-center gap-8"><button></button><span class="text-grey-500 font-medium text-base" data-testid="pdf-scale">100 %</span><button></button></div>
    <div class="flex items-center gap-8"><button></button><span class="text-grey-500 font-medium text-base" data-testid="pdf-page">3 / 5</span><button></button></div>
  </div>
</div>"
`;

exports[`FzPdfViewer > Snapshots > should match snapshot - scale 150% 1`] = `
"<div class="flex flex-col gap-12" style="height: 768px; width: 512px;">
  <div class="bg-grey-100 p-24 flex overflow-hidden h-full w-full rounded justify-center items-center">
    <div class="overflow-auto h-full">
      <div data-testid="vue-pdf" class="shadow-md"></div>
    </div>
  </div>
  <div class="flex justify-between">
    <div class="flex items-center gap-8"><button></button><span class="text-grey-500 font-medium text-base" data-testid="pdf-scale">150 %</span><button></button></div>
    <div class="flex items-center gap-8"><button disabled=""></button><span class="text-grey-500 font-medium text-base" data-testid="pdf-page">1 / 5</span><button></button></div>
  </div>
</div>"
`;

exports[`FzPdfViewer > Snapshots > should match snapshot - small size 1`] = `
"<div class="flex flex-col gap-12" style="height: 768px; width: 512px;">
  <div class="bg-grey-100 p-24 flex overflow-hidden h-full w-full rounded justify-center items-center">
    <div class="overflow-auto h-full">
      <div data-testid="vue-pdf" class="shadow-md"></div>
    </div>
  </div>
  <div class="flex justify-between">
    <div class="flex items-center gap-8"><button></button><span class="text-grey-500 font-medium text-sm" data-testid="pdf-scale">100 %</span><button></button></div>
    <div class="flex items-center gap-8"><button disabled=""></button><span class="text-grey-500 font-medium text-sm" data-testid="pdf-page">1 / 5</span><button></button></div>
  </div>
</div>"
`;

exports[`FzPdfViewer > Snapshots > should match snapshot - with custom classes 1`] = `
"<div class="flex flex-col gap-12 custom-container" style="height: 768px; width: 512px;">
  <div class="bg-grey-100 p-24 flex overflow-hidden h-full w-full rounded justify-center items-center custom-pdf-container">
    <div class="overflow-auto h-full">
      <div data-testid="vue-pdf" class="shadow-md"></div>
    </div>
  </div>
  <div class="flex justify-between">
    <div class="flex items-center gap-8"><button></button><span class="text-grey-500 font-medium text-base" data-testid="pdf-scale">100 %</span><button></button></div>
    <div class="flex items-center gap-8"><button disabled=""></button><span class="text-grey-500 font-medium text-base" data-testid="pdf-page">1 / 5</span><button></button></div>
  </div>
</div>"
`;
